@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-16T16:18:42Z",
-  "count_outdated" : 942,
-  "uniques_outdated" : 590,
-  "count" : 963,
-  "uniques" : 605,
+  "timestamp" : "2023-08-17T08:17:52Z",
+  "count_outdated" : 943,
+  "uniques_outdated" : 591,
+  "count" : 965,
+  "uniques" : 607,
   "clones" : [
-    {
-      "timestamp": "2023-08-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-04T00:00:00Z",
       "count": 1,
@@ -112,6 +103,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-17T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
