@@ -1,12 +1,7 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-08-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-04T00:00:00Z",
       "count": 1,
@@ -61,6 +56,11 @@
       "timestamp": "2023-08-16T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-17T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
